crates/tui/tests/snapshots/views__view_09_agent_changes.snap
---
source: crates/tui/tests/views.rs
expression: "draw(&agent_app(Tab::Changes))"
---
" SYMPHONY arete-mobile · Agente                                                                 "
"┌ Agente ──────────────────────────────────────────────────────────────────────────────────────┐"
"│AGENTE #1  RUNNING  trabajando                                                                │"
"│Tarea:      Fix refresh token expiration                                                      │"
"│Executor:   codex/gpt-5 (run #2)                                                              │"
"│Failover:   ANY   Workspace: symphony/8e4f/agent-001   Checkpoint: hace 14 s                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
" 1 Resumen │ 2 Conversación │ 3 Actividad │ 4 Cambios │ 5 Historial                             "
"┌ Cambios ─────────────────────────────────────────────────────────────────────────────────────┐"
"│diff --git a/src/auth.ts b/src/auth.ts                                                        │"
"│--- a/src/auth.ts                                                                             │"
"│+++ b/src/auth.ts                                                                             │"
"│@@ -1,3 +1,4 @@                                                                               │"
"│ import { token } from './t';                                                                 │"
"│-const ttl = 60;                                                                              │"
"│+const ttl = 3600;                                                                            │"
"│+export const rotate = true;                                                                  │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
" ←→ pestaña · m mensaje · p pausa · s modelo · o CLI · e exportar · d diff · x detener · Esc    "
