crates/tui/tests/snapshots/views__view_12_24_agent_history_and_failover_event.snap
---
source: crates/tui/tests/views.rs
expression: "draw(&agent_app(Tab::History))"
---
" SYMPHONY arete-mobile · Agente                                                                 "
"┌ Agente ──────────────────────────────────────────────────────────────────────────────────────┐"
"│AGENTE #1  RUNNING  trabajando                                                                │"
"│Tarea:      Fix refresh token expiration                                                      │"
"│Executor:   codex/gpt-5 (run #2)                                                              │"
"│Failover:   ANY   Workspace: symphony/8e4f/agent-001   Checkpoint: hace 14 s                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
" 1 Resumen │ 2 Conversación │ 3 Actividad │ 4 Cambios │ 5 Historial                             "
"┌ Historial ───────────────────────────────────────────────────────────────────────────────────┐"
"│EXECUTORS                                                                                     │"
"│  #1  claude/sonnet        EXITED · QUOTA_EXHAUSTED                                           │"
"│  #2  codex/gpt-5          RUNNING                                                            │"
"│                                                                                              │"
"│CAMBIOS DE EXECUTOR                                                                           │"
"│  ── claude/sonnet → codex/gpt-5                                                              │"
"│     Motivo: FAILOVER (DAILY_QUOTA) · checkpoint de hace 8 s · hace 1 min                     │"
"│                                                                                              │"
"│Cambia el executor, no el agente: tarea, workspace e historial se conservan.                  │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
" ←→ pestaña · m mensaje · p pausa · s modelo · o CLI · e exportar · d diff · x detener · Esc    "
