crates/tui/tests/snapshots/views__view_13_model_picker.snap
---
source: crates/tui/tests/views.rs
expression: draw(&app)
---
" SYMPHONY arete-mobile · Elegir ejecución                                                       "
"┌ Elegir ejecución ────────────────────────────────────────────────────────────────────────────┐"
"│PROFILES (Symphony elige entre los modelos utilizables)                                       │"
"│  @code        Best available for implementation                                              │"
"│  @fast        Prioritize response speed                                                      │"
"│  @conserve    Preserve scarce quota                                                          │"
"│                                                                                              │"
"│MODELOS EXACTOS (se obedecen; no se sustituyen en silencio)                                   │"
"│  Claude       / Claude Opus          DISPONIBLE                                              │"
"│▸ Claude       / Claude Sonnet        DISPONIBLE                                              │"
"│  Codex        / GPT-5                LOGIN_REQUIRED                                          │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
" ↑↓ elegir · Enter usar · Esc volver                                                            "
