crates/tui/tests/snapshots/views__view_14_explain_route.snap
---
source: crates/tui/tests/views.rs
expression: draw(&app)
---
" SYMPHONY arete-mobile · Por qué este modelo                                                    "
"┌ Explain Route ───────────────────────────────────────────────────────────────────────────────┐"
"│Decisión más reciente: en un failover · @code · hace 2 min                                    │"
"│                                                                                              │"
"│Profile: @code                                                                                │"
"│Claude Sonnet — descartado: cuota agotada (o ya agotada en este agente)                       │"
"│Codex Sol — elegible · salud HEALTHY · cuota desconocida                                      │"
"│Kimi — descartado: en espera tras un límite temporal                                          │"
"│Elegido: Codex Sol                                                                            │"
"│Por qué:                                                                                      │"
"│+ buen ajuste con el profile                                                                  │"
"│+ proveedor sano                                                                              │"
"│                                                                                              │"
"│CANDIDATOS                                                                                    │"
"│  MODELO                       ESTADO     PUNTAJE  MOTIVO                                     │"
"│▸ openai/sol                   elegible      1.42                                             │"
"│  claude/sonnet                descartado       —  EXHAUSTED                                  │"
"│  moonshot/default             descartado       —  COOLDOWN                                   │"
"│                                                                                              │"
"│DECISIONES ANTERIORES                                                                         │"
"│  hace 15 min · SPAWN → claude/sonnet                                                         │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
" Esc volver al agente                                                                           "
