crates/tui/tests/snapshots/views__view_22_provider_detail_with_a_temporary_limit_and_estimated_quota.snap
---
source: crates/tui/tests/views.rs
expression: draw(&app)
---
" SYMPHONY arete-mobile · Proveedores                                                            "
"┌ Proveedores ─────────────────────────────────────────────────────────────────────────────────┐"
"│  PROVEEDOR   ESTADO          SALUD         CUOTA                 VERSIÓN   MODELOS           │"
"│  Claude      READY           QUOTA_LOW     15 % restante         2.1.0           4           │"
"│  Codex       LOGIN_REQUIRED  UNKNOWN       restante desconocido  0.40.0          0           │"
"│▸ Copilot     READY           RATE_LIMITED  estimada (sin %)      1.0.60          1           │"
"│                                                                                              │"
"│Copilot está listo para usarse.                                                               │"
"│Ruta: /usr/bin/copilot                                                                        │"
"│Salud: RATE_LIMITED · evidencia: TEMP_RATE_LIMIT x1 · reintenta en 45 s                       │"
"│Cuota: estimada (sin %) (ESTIMATED) · reserva 20 %                                            │"
"│Modelos (1): Copilot (automático)                                                             │"
"│Agentes que lo usan ahora: 0                                                                  │"
"│Último error: TEMP_RATE_LIMIT — 429 Too Many Requests · hace 3 min                            │"
"│Uso (7 días): 0 tokens informados · 48,0k estimados                                           │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
" ↑↓ elegir · r volver a detectar · d activar/desactivar · Esc volver                            "
