crates/tui/tests/snapshots/views__view_22_providers.snap
---
source: crates/tui/tests/views.rs
expression: draw(&app)
---
" SYMPHONY arete-mobile · Proveedores                                                            "
"┌ Proveedores ─────────────────────────────────────────────────────────────────────────────────┐"
"│  PROVEEDOR   ESTADO          SALUD         CUOTA                 VERSIÓN   MODELOS           │"
"│▸ Claude      READY           QUOTA_LOW     15 % restante         2.1.0           4           │"
"│  Codex       LOGIN_REQUIRED  UNKNOWN       restante desconocido  0.40.0          0           │"
"│  Copilot     READY           RATE_LIMITED  estimada (sin %)      1.0.60          1           │"
"│                                                                                              │"
"│Claude está listo para usarse.                                                                │"
"│Ruta: /usr/bin/claude                                                                         │"
"│Salud: QUOTA_LOW · evidencia: provider quota report · se reinicia en 2 h                      │"
"│Cuota: 15 % restante (KNOWN) · reserva 20 %                                                   │"
"│Modelos (3): Claude Haiku, Claude Opus, Claude Sonnet                                         │"
"│Agentes que lo usan ahora: 1                                                                  │"
"│Uso (7 días): 1,2M tokens informados · 0 estimados                                            │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
" ↑↓ elegir · r volver a detectar · d activar/desactivar · Esc volver                            "
