crates/tui/tests/snapshots/views__view_30_recovery_center.snap
---
source: crates/tui/tests/views.rs
expression: draw(&app)
---
" SYMPHONY arete-mobile · Recovery Center                                                        "
"┌ Recovery Center ─────────────────────────────────────────────────────────────────────────────┐"
"│▸ EXECUTOR_EXITED      agente #2   hace 1 min                                                 │"
"│    Claude terminó con código 1.                                                              │"
"│  SESSION_INTERRUPTED  proyecto    hace 2 h                                                   │"
"│    La sesión anterior se cortó sin cerrarse.                                                 │"
"│                                                                                              │"
"│El workspace y el último checkpoint se conservan: recuperar no pierde trabajo.                │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
" ↑↓ elegir · r reiniciar · c recuperar · s detener · x descartar · Enter abrir · Esc volver     "
